<resources>
    <string name="app_name">MobileAppPRC</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="prc_acroynym">PRC</string>
    <string name="republicPH_label">Republic of the Philippines</string>
    <string name="prcLogo">logo</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="sign_in">SIGN IN</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five. ecimen book. It has survived not only five.ecimen book. It has survived not only five.</string>
    <string name="startbtn">Let\'s Start</string>
    <string name="important_dates">Important Dates</string>
    <string name="phone_number">Phone Number:</string>
    <string name="enter_otp">Enter OTP:</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="send_otp">SEND OTP</string>
</resources>