<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#2F447E"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/roboto"
        android:text="@string/prc_acroynym"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/republic_label"
        app:layout_constraintTop_toBottomOf="@+id/republic_label" />

    <TextView
        android:id="@+id/republic_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/roboto"
        android:text="@string/republicPH_label"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toEndOf="@+id/prc_logo"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/prc_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/password"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/prc" />

    <EditText
        android:id="@+id/number_form"
        android:layout_width="341dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/form_radius_medium"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/phone_number"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/number_form"
        app:layout_constraintStart_toStartOf="@+id/number_form" />

    <EditText
        android:id="@+id/otp_form"
        android:layout_width="341dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/form_radius_medium"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_form"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/enter_otp"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/otp_form"
        app:layout_constraintStart_toStartOf="@+id/otp_form" />

    <Button
        android:id="@+id/verify_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_radius_tiny"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/roboto"
        android:text="@string/verify_otp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:theme="@style/Button.Blue"
        app:layout_constraintEnd_toEndOf="@+id/otp_form"
        app:layout_constraintStart_toStartOf="@+id/otp_form"
        app:layout_constraintTop_toBottomOf="@+id/otp_form" />

    <Button
        android:id="@+id/send_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_radius_tiny"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/roboto"
        android:text="@string/send_otp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:theme="@style/Button.Blue"
        app:layout_constraintEnd_toEndOf="@+id/number_form"
        app:layout_constraintStart_toStartOf="@+id/number_form"
        app:layout_constraintTop_toBottomOf="@+id/number_form" />


</androidx.constraintlayout.widget.ConstraintLayout>